# pydantic_2_sqlalchemy_2_pydantic

./: .gitignore  README.md  create_tables.py  dbio.py  pyproject.toml  test_sqlite3.db
src/: custom_pydantic_column.py  orms.py  pydantic_model.py
