[tool.poetry]
name = "pydantic-2-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["RahulDas-dev <r.das699@gmail.com>"]
readme = "README.md"
packages = [{include = "pydantic_2_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.23"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pyclean = "^2.7.5"
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
